# WebScraping_Practice

./: README.md  main.py  pyproject.toml  requirements.txt
api_project/api_project/: middlewares.py
api_project/api_project/spiders/: quotes.py  quotes_login.py
spider_tutorial/: audible.csv  books.json  population.json  population_2.json
spider_tutorial/spider_tutorial/: middlewares.py  pipelines.py  settings.py
spider_tutorial/spider_tutorial/spiders/: audible.py  transcripts.py  worldometer.py
