[project]
name = "scrapy-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.8.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "scrapy>=2.14.2",
    "scrapy-cloudflare-middleware>=0.0.1",
    "selenium>=4.41.0",
]
